# bswap

./: CHANGELOG.md  Cargo.toml  README.md
src/: io.rs  lib.rs  pattern.rs
